# ai-agent-challenge

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt  test1.py
custom_parsers/: icici_parser.py
prompts/examples/: camelot_example.py  pdfplumber_example.py
tests/: 1.ipynb  test_icici_parser.py
