[project]
name = "ai-agent-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camelot-py>=1.0.9",
    "ghostscript>=0.8.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pytest>=8.4.2",
]
